[gd_scene load_steps=3 format=3 uid="uid://xqa6c27lew6w"]

[ext_resource type="Theme" uid="uid://clyeptsut3tbs" path="res://themes/macOS_light.tres" id="1_i3mxx"]
[ext_resource type="Script" uid="uid://hgcu4ll3fqet" path="res://scripts/Toolbar.gd" id="2_wdy5x"]

[node name="ToolbarContainer" type="HBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2
size_flags_horizontal = 3
theme = ExtResource("1_i3mxx")
alignment = 1
script = ExtResource("2_wdy5x")

[node name="TextItems" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 2

[node name="Font" type="OptionButton" parent="TextItems"]
layout_mode = 2
selected = 0
item_count = 4
popup/item_0/text = "Arial"
popup/item_0/id = 0
popup/item_1/text = "Courier New"
popup/item_1/id = 1
popup/item_2/text = "Times New Romain"
popup/item_2/id = 2
popup/item_3/text = "Verdana"
popup/item_3/id = 3

[node name="Size" type="OptionButton" parent="TextItems"]
layout_mode = 2
selected = 5
item_count = 16
popup/item_0/text = "8"
popup/item_0/id = 0
popup/item_1/text = "9"
popup/item_1/id = 1
popup/item_2/text = "10"
popup/item_2/id = 2
popup/item_3/text = "11"
popup/item_3/id = 3
popup/item_4/text = "12"
popup/item_4/id = 4
popup/item_5/text = "14"
popup/item_5/id = 5
popup/item_6/text = "16"
popup/item_6/id = 6
popup/item_7/text = "18"
popup/item_7/id = 7
popup/item_8/text = "20"
popup/item_8/id = 8
popup/item_9/text = "22"
popup/item_9/id = 9
popup/item_10/text = "24"
popup/item_10/id = 10
popup/item_11/text = "26"
popup/item_11/id = 11
popup/item_12/text = "28"
popup/item_12/id = 12
popup/item_13/text = "36"
popup/item_13/id = 13
popup/item_14/text = "48"
popup/item_14/id = 14
popup/item_15/text = "72"
popup/item_15/id = 15

[node name="ColorOptions" type="OptionButton" parent="TextItems"]
visible = false
layout_mode = 2
selected = 0
item_count = 11
popup/item_0/text = "Black"
popup/item_0/id = 0
popup/item_1/text = "White"
popup/item_1/id = 1
popup/item_2/text = "Red"
popup/item_2/id = 2
popup/item_3/text = "Green"
popup/item_3/id = 3
popup/item_4/text = "Blue"
popup/item_4/id = 4
popup/item_5/text = "Cyan"
popup/item_5/id = 5
popup/item_6/text = "Magenta"
popup/item_6/id = 6
popup/item_7/text = "Yellow"
popup/item_7/id = 7
popup/item_8/text = "Orange"
popup/item_8/id = 8
popup/item_9/text = "Purple"
popup/item_9/id = 9
popup/item_10/text = "Gray"
popup/item_10/id = 10

[node name="Label" type="Label" parent="TextItems"]
layout_mode = 2
text = "Color"

[node name="FontColor" type="ColorPickerButton" parent="TextItems"]
layout_mode = 2
size_flags_horizontal = 0
text = "    "

[node name="Bold" type="Button" parent="TextItems"]
layout_mode = 2
text = "B"

[node name="Italic" type="Button" parent="TextItems"]
layout_mode = 2
text = "I"

[node name="MiscIcons" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Evaluate" type="Button" parent="MiscIcons"]
layout_mode = 2
text = "I"

[node name="Closet" type="Button" parent="MiscIcons"]
layout_mode = 2
text = "I"

[node name="TopLevel" type="Button" parent="MiscIcons"]
layout_mode = 2
text = "I"

[node name="Open" type="Button" parent="MiscIcons" groups=["NotCursorInput"]]
layout_mode = 2
text = "Open"

[node name="Save" type="Button" parent="MiscIcons"]
layout_mode = 2
text = "Save"

[node name="BoxItems" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0

[node name="Background" type="Label" parent="BoxItems"]
layout_mode = 2
text = "Background"

[node name="BackgroundColor" type="ColorPickerButton" parent="BoxItems"]
layout_mode = 2
text = "    "

[node name="Border" type="OptionButton" parent="BoxItems"]
visible = false
layout_mode = 2
selected = 0
item_count = 11
popup/item_0/text = "Black"
popup/item_0/id = 0
popup/item_1/text = "White"
popup/item_1/id = 1
popup/item_2/text = "Red"
popup/item_2/id = 2
popup/item_3/text = "Green"
popup/item_3/id = 3
popup/item_4/text = "Blue"
popup/item_4/id = 4
popup/item_5/text = "Cyan"
popup/item_5/id = 5
popup/item_6/text = "Magenta"
popup/item_6/id = 6
popup/item_7/text = "Yellow"
popup/item_7/id = 7
popup/item_8/text = "Orange"
popup/item_8/id = 8
popup/item_9/text = "Purple"
popup/item_9/id = 9
popup/item_10/text = "Gray"
popup/item_10/id = 10

[connection signal="item_selected" from="TextItems/Size" to="." method="_on_size_item_selected"]
[connection signal="color_changed" from="TextItems/FontColor" to="." method="_on_font_color_color_changed"]
[connection signal="pressed" from="MiscIcons/Open" to="." method="_on_open_pressed"]
[connection signal="color_changed" from="BoxItems/BackgroundColor" to="." method="_on_background_color_color_changed"]
